--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 
+html{
+    font-size: 10px;
+}
+
 body{
     font-family: 'Ubuntu', sans-serif; 
     height: 400vh;
@@ -19,5 +23,16 @@ header{
     
     
     background: url('../assets/img/bg_header.jpg') center/cover;
-    background-attachment: fixed;
+    
+}
+
+header h1{
+    font-size: 6rem;
+    color:#fff;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+background-color: rosybrown;
 }
