--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,51 @@ body{
     height: 400vh;
 }
 
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
+
+
+.top{
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5rem;
+    z-index: 1;
+    background-color: #022873;
+    color: #fff;
+}
+
+
+.logo{
+    flex:1;
+    font-size: 1.8rem;
+    /* background-color: khaki; */
+    margin-left: 1.5rem;
+}
+
+
+.top span{
+    flex:1;
+    font-size: 3rem;
+    /* background-color: green; */
+    margin-right: 1.5rem;
+    display:flex;
+    justify-content: flex-end;
+}
+
+
+nav{
+    display: none;
+}
 
 header{
+     margin-top: 50px;
     /* background-color: grey; */
     height: 120vh;
     position: relative;
@@ -33,7 +76,7 @@ header::before {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .9);
+    background-color: rgba(0, 0, 0, .4);
 }
 
 header h1{
