--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html{
 
 body{
     font-family: 'Ubuntu', sans-serif; 
-    height: 400vh;
+    /* height: 400vh; */
 }
 
 a{
@@ -29,6 +29,7 @@ a{
     z-index: 1;
     background-color: #022873;
     color: #fff;
+    z-index: 2;
 }
 
 
@@ -72,7 +73,7 @@ nav a{
 header{
      margin-top: 50px;
     /* background-color: grey; */
-    height: 120vh;
+    height: 80vh;
     position: relative;
     /* background-image: url('../assets/img/bg_header.jpg'); */
     /* background-size: cover; */
@@ -111,10 +112,78 @@ header h1{
 
 }
 
+header a {
+    position: absolute;
+    bottom: 20%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 200px;
+    height: 6rem;
+    border: 1px solid #fff;
+    border-radius: .4rem;
+    font-size: 2rem;
+    text-align: center;
+    line-height: 6rem;
+    z-index: 1;
+    /* moze byc tak nr1 */
+    /* transition: .5s; */
+
+}
+/* do nr 1
+header a:hover {
+    background-color: #026873;
+} */
+
+header a::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #026873;
+    border-radius: .4rem;
+    transition: .5s;
+    z-index: -1;
+}
+
+header a:hover::after {
+    height: 100%;
+}
+
+section {
+    height: 100vh;
+
+}
+
+
+section h2 {
+    text-align: center;
+    font-size: 3rem;
+    font-weight: bold;
+    padding-top: 8rem;
+
+
+
+}
+
+
+
+section:nth-of-type(even) {
+    background-color: lightgrey;
+}
+
 @media screen and (min-width: 700px) {
 
     header h1 {
         font-size: 8rem;
+    }
+
+
+    .logo {
+        flex: 1.2;
     }
 
 }
@@ -123,5 +192,21 @@ header h1{
     header h1 {
         font-size: 8rem;
     }
+
+
+    .top span {
+        display: none;
+    }
+
+    nav {
+        flex: 1;
+        position: static;
+        display: flex;
+        /* align-items: center; */
+        justify-content: space-around;
+
+    }
+
+
 
 }
